<resources>
    <string name="app_name">ChessClock</string>
    <string name="nav_header_title">Chess Clock</string>
    <string name="nav_header_subtitle">play real chess</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="menu_home">Home</string>

    <!-- Destination ids -->
    <string name="nav_home">nav_home</string>

    <string name="drag">drag</string>
    <string name="_15_10">15m +10c</string>
    <string name="_5_5">5m +5c</string>
    <string name="_3_2">3m +2c</string>
    <string name="_2_1">2m +1c</string>
    <string name="_1_1">1m +1c</string>
    <string name="_45_45">45m +45c</string>

    <string name="_60">60m</string>
    <string name="_30">30m</string>
    <string name="_20">20m</string>
    <string name="_10">10m</string>
    <string name="_5">5m</string>
    <string name="_3">3m</string>
    <string name="_1">1m</string>

    <!-- Dialogs -->
    <string name="custom_time">Custom Time</string>
    <string name="set_min_sec_inc">Set minutes, seconds and, if necessary, an increment (seconds)</string>
    <string name="time_control_not_set">Time control is not set</string>
    <string name="time_is_over">Time is over</string>
    <string name="_lost_on_time">%s lost on time!</string>

    <string name="min">min</string>
    <string name="sec">sec</string>
    <string name="inc">inc</string>
    <string name="default_time">0:00.0</string>

    <!-- Privacy Policy -->
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privicy_title">The Privacy Policy of "ChessClock"</string>
    <string name="privicy_collect">What information collect the app</string>
    <string name="privicy_collect_text">The app "ChessClock" doesn\'t collect any information about user, or his location, it doesn\'t collect server or HTTP logs of any kind. This application doesn\'t require any permissions like internet, bluetooth, etc.
The app doesn\'t collect any persistent identifiers (like the Google ID).</string>
    <string name="privicy_use">How the app uses the information</string>
    <string name="privicy_use_text">As the app doesn\'t collect any information - it doesn\'t use it any way</string>
    <string name="privicy_share">What information share the app</string>
    <string name="privicy_share_text">As the app doesn\'t collect any information - it doesn\'t share it any way</string>
    <string name="privicy_doing">What the app doing</string>
    <string name="privicy_doing_text">The app works like a regular chess clock - you can set the time with or without increments and press a button to start the clock. The app doesn\'t do anything else</string>
    <string name="privacy_policy_link">Link to <a href="https://sites.google.com/view/chessclock2/home">The Privacy Policy</a></string>

</resources>
